<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="top">

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/teal_200"
            android:textSize="32sp"
            android:text="@string/settings"
            android:id="@+id/settingsMenu"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText android:layout_height="wrap_content"
                    android:layout_width="0dp" android:id="@+id/messageE"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/numberE"
                    app:layout_constraintEnd_toEndOf="@+id/programmingB"
                    app:layout_constraintTop_toBottomOf="@+id/numberE"
                    android:textAlignment="textStart"
                    android:maxLength="50"
                    android:maxLines="4"
                    android:singleLine="false"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:hint="@string/message"/>

                <Button android:layout_height="70dp"
                    android:layout_width="0dp"
                    android:text="@string/contact"
                    android:id="@+id/saveContactB"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/messageE"
                    app:layout_constraintEnd_toEndOf="@+id/messageE"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/messageE"
                    app:layout_constraintVertical_bias="0.120000005"
                    android:layout_marginBottom="8dp"/>

                <EditText android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/numberE"
                    android:layout_marginTop="96dp"
                    app:layout_constraintStart_toStartOf="@+id/programmingB"
                    app:layout_constraintTop_toBottomOf="@+id/programmingB"
                    android:inputType="numberDecimal" android:hint="@string/number"
                    android:ems="9"
                    android:layout_gravity="start|center_vertical"/>

                <Button android:layout_height="125dp"
                    android:layout_width="match_parent"
                    android:text="@string/dose_planning"
                    android:id="@+id/programmingB"
                    android:layout_marginTop="76dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.733"
                    android:layout_marginHorizontal="30dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>